# SwiftStore-IMS

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: CartItem.h
src/ui/: AddProductDialog.cpp  AddProductDialog.h  AdminWidget.cpp  AdminWidget.h  CustomerWidget.cpp  CustomerWidget.h  LoginWidget.cpp  LoginWidget.h  MainWindow.cpp  MainWindow.h  VendorWidget.cpp  VendorWidget.h
